# clostty

./: Cargo.toml  README.md
src/: config.rs  hook.rs  install.rs  main.rs
